[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cell.gd" type="Script" id=1]
[ext_resource path="res://Art/Fonts/Audiowide-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Cell" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0.858824, 0.862745, 0.521569, 1 )

[node name="BottomBorder" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 62.0
margin_right = 62.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )

[node name="TopBorder" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )

[node name="RightBorder" type="ColorRect" parent="."]
margin_left = 62.0
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )

[node name="LeftBorder" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 64.0
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="Number" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
clip_text = true
